was header vergeten bij de h2 tags

--- a/opdracht_3.1/P1-html-css-layout-main/index.html
+++ b/opdracht_3.1/P1-html-css-layout-main/index.html
@@ -31,25 +31,33 @@
     </section>
     <section>
       <article>
+        <header>
         <h2>Html/CSS</h2>
+      </header>
         <img src="img/1_lJ32Bl-lHWmNMUSiSq17gQ.png" alt="html/css">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores optio amet est quos a, praesentium esse id laudantium eos, sequi enim repellendus provident! Quam dolorem, deleniti facere beatae et labore.</p>
       </article>
     </section>
       <section>
         <article>
+          <header>
           <h2>Javascript</h2>
+        </header>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In maiores tenetur doloribus incidunt iure distinctio quos, dolores explicabo dolore ipsam. Possimus eveniet eaque explicabo vero unde sed porro accusamus aspernatur.</p>
           <img src="img/Javascript_Logo.png" alt="Javascript">
         </article>
       </section>
       <section>
+        <header>
         <h2>PHP</h2>
+      </header>
         <img src="img/PHP_Logo,_text_only.svg.png" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam veritatis, obcaecati magni deserunt veniam fugit laboriosam maiores praesentium, ex voluptatem quibusdam corrupti dolor quaerat commodi aliquid porro rerum. Non, repellat!</p>
       </section>
       <section>
+        <header>
         <h2>SQL</h2>
+      </header>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium fuga esse quisquam repudiandae velit, similique, ab officiis recusandae et atque accusamus exercitationem possimus, voluptates obcaecati hic quasi modi temporibus facere.</p>
         <img src="img/mysql-logo.jpg" alt="SQL">
       </section>
