--- a/opdracht_4.1/opdracht_4.1/index.html
+++ b/opdracht_4.1/opdracht_4.1/index.html
@@ -50,7 +50,7 @@
             remake belooft Naugthy Dog meer dan alleen een audiovisueel likje
             verf. Zo maakt de game gebruik van de DualSence’s haptics, krijgt de
             AI een upgrade en zijn er meer dan 60 toegankelijkheidsopties. En
-            voor de sadomasochisten onder ons: er komt ook een permadeath-modus.
+            voorr de sadomasochisten onder ons: er komt ook een permadeath-modus.
           </p>
         </article>
         <article>
