--- a/opdracht_3.1/P1-html-css-layout-main/index.html
+++ b/opdracht_3.1/P1-html-css-layout-main/index.html
@@ -24,10 +24,10 @@
       </ul>
     </nav>
     <main>
-    <section>
+    <section class="section-1">
       <header>
-        <h1>First year TCR programming languages</h1>
-      </header>
+      <h1>First year TCR programming languages</h1>
+        </header>
     </section>
     <section>
       <article>
@@ -62,7 +62,7 @@
         <img src="img/mysql-logo.jpg" alt="SQL">
       </section>
       <footer>
-        <p>Copyright Techniek college Rotterdam</p>
+        <p class="footer-text">Copyright Techniek college Rotterdam</p>
       </footer>
     </main>
   </body>
