--- a/opdracht_4.1/opdracht_4.1/index.html
+++ b/opdracht_4.1/opdracht_4.1/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <main>
-      <header class="header-1">
+      <header class="header">
         <h1>
           <em>
             releases september 2022 - De 7 opvallendste games van deze
