--- a/opdracht_3.1/P1-html-css-layout-main/index.html
+++ b/opdracht_3.1/P1-html-css-layout-main/index.html
@@ -21,6 +21,13 @@
         <li><a href="#">Javascript</a></li>
         <li><a href="#">PHP</a></li>
         <li><a href="#">SQL</a></li>
+        <li class="kleur"><a href="#">Jaar 2</a>
+          <ul>
+            <li><a href="#">oop</a></li>
+            <li><a href="#">larenveld</a></li>
+            <li><a href="#">testen</a></li>
+          </ul>
+      </li>
       </ul>
     </nav>
     <main>
