--- a/opdracht_3.1/P1-html-css-layout-main/index.html
+++ b/opdracht_3.1/P1-html-css-layout-main/index.html
@@ -63,7 +63,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. In maiores
             tenetur doloribus incidunt iure distinctio quos, dolores explicabo
             dolore ipsam. Possimus eveniet eaque explicabo vero unde sed porro
-            accusamus aspernatur.
+            accusamus aspernaturr.
           </p>
           <img  src="img/Javascript_Logo.png" alt="Javascript" />
         </article>
